# lab23dev

./: README.md
LAB-23-JNI-Protection-Anti-Debug-native-main/: README.md  settings.gradle.kts
LAB-23-JNI-Protection-Anti-Debug-native-main/app/: build.gradle.kts
LAB-23-JNI-Protection-Anti-Debug-native-main/app/src/main/: AndroidManifest.xml
LAB-23-JNI-Protection-Anti-Debug-native-main/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LAB-23-JNI-Protection-Anti-Debug-native-main/app/src/main/java/com/example/jni/: MainActivity.java
LAB-23-JNI-Protection-Anti-Debug-native-main/app/src/main/res/layout/: activity_main.xml
LAB-23-JNI-Protection-Anti-Debug-native-main/app/src/main/res/values/: themes.xml
LAB-23-JNI-Protection-Anti-Debug-native-main/app/src/main/res/values-night/: themes.xml
LAB-23-JNI-Protection-Anti-Debug-native-main/gradle/wrapper/: gradle-wrapper.properties
